--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This the back-end of central user hub.",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "jest",
     "test:dev": "jest --watchAll",
@@ -16,6 +17,9 @@
     "mongo": "^0.1.0"
   },
   "devDependencies": {
-    "jest": "^29.0.3"
+    "@types/jest": "^29.5.3",
+    "@types/mongodb": "^4.0.7",
+    "jest": "^29.0.3",
+    "typescript": "^3.9.10"
   }
 }
