--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "mongo": "^0.1.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.1",
     "@types/jest": "^29.5.3",
     "@types/mongodb": "^4.0.7",
     "jest": "^29.0.3",
-    "typescript": "^3.9.10"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   }
 }
