--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "mongo": "^0.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.1",
     "@types/jest": "^29.5.3",
     "@types/mongodb": "^4.0.7",
