config: Add files to run server

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,11 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./"
+    "rootDir": "./",
+    "esModuleInterop": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "tests/**/*.ts"
+  ]
 }
