--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,14 @@
   "name": "central-user-hub-back",
   "version": "1.0.0",
   "description": "This the back-end of central user hub.",
-  "main": "index.js",
+  "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "test": "jest",
     "test:dev": "jest --watchAll",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "start": "node dist/server.js",
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "author": "Tiago Paz",
   "license": "ISC",
@@ -20,10 +22,14 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.6.1",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/mongodb": "^4.0.7",
     "jest": "^29.0.3",
+    "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
