--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongo": "^0.1.0"
+    "mongo": "^0.1.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
