--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "ra-data-json-server": "^4.12.0",
     "react": "^18.2.0",
     "react-admin": "^4.12.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web-vitals": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
