--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cypress": "^12.17.3",
     "ra-data-json-server": "^4.12.0",
     "react": "^18.2.0",
